# protogen_software

./: .audio.h.swp  .gitignore  .main.cpp.swp  CMakeLists.txt  Images.h  README.md  audio.h  build.sh  disable_protogen_network.sh  enable_protogen_network.sh  images.h  index.html  main.cpp  make_pch.sh  minecraft.h  minecraft.html  minecraft_interface.html  protogen.h  setup.sh  setup_dev.sh  sse.h  utils.h  wifi_direct_config.sh
.github/workflows/: cmake-multi-platform.yml
apps/: CMakeLists.txt
apps/include/protogen/apps/: AppOriginBundle.h  AppSafetyWrapper.h  AppsProvider.h  HomeDirLocationProvider.h  HomeDirLocator.h  IUserDataLocationProvider.h  IUserDataLocator.h  ProtogenAppDefaultDecorator.h  ProtogenAppInitializer.h  protogen_app_loader.h
apps/src/: AppSafetyWrapper.cpp  AppsProvider.cpp  HomeDirLocationProvider.cpp  ProtogenAppDefaultDecorator.cpp  ProtogenAppInitializer.cpp  protogen_app_loader.cpp
cmake/: CppHttplib.cmake  GoogleTest.cmake  GraphicsMagick.cmake  RpiRgbLedMatrixLibrary.cmake  Sdl.cmake
config/: protogen-network.service
extensions/: CMakeLists.txt
extensions/include/protogen/extensions/: ExtensionDeleter.h  ExtensionOriginBundle.h  IExtensionCheck.h  IExtensionFinder.h  IExtensionInitializer.h  IExtensionResourceDataLocator.h  IExtensionUserDataLocator.h
extensions/include/protogen/extensions/checks/: RequiredAttributesCheck.h
extensions/include/protogen/extensions/data_locators/: ExtensionDirResourceDataLocator.h  ExtensionHomeDirUserDataLocator.h
extensions/include/protogen/extensions/finders/: DirectoryExtensionFinder.h
extensions/include/protogen/extensions/initializers/: BaseExtensionInitializer.h
extensions/src/: BaseExtensionInitializer.cpp  DirectoryExtensionFinder.cpp  ExtensionDeleter.cpp  ExtensionDirResourceDataLocator.cpp  ExtensionHomeDirUserDataLocator.cpp  RequiredAttributesCheck.cpp
include/: app_state.h  audio.h  cmake_config.h.in  common_headers.hpp  images.h  minecraft.h  minecraft_state.h  proportion.h  protogen.h  protogen_head_state.h  render.h  render_surface.h  renderer.h  sdl_render_surface.h  utils.h  web_server.h
installable_headers/: CMakeLists.txt
installable_headers/include/protogen/: Endpoints.hpp  IAttributeStore.hpp  ICanvas.hpp  IExtension.hpp  IExtention.hpp  IInitializable.hpp  IProtogenApp.hpp  IReadableAttributeStore.hpp  IRenderSurface.hpp  ISensor.hpp  IWritableAttributeStore.hpp  Proportion.hpp  Resolution.hpp  StandardAttributeStore.hpp  StandardAttributes.hpp  UniSensor.hpp
installable_headers/protogen/: IProtogenApp.hpp
installable_includes/: ICanvas.hpp  IProportionProvider.hpp  IProtogenApp.hpp  Proportion.hpp
installable_includes/protogen/: ICanvas.hpp  IProportionProvider.hpp  IProtogenApp.hpp
main/: CMakeLists.txt
main/include/: cmake_config.h.in
main/src/: main.cpp  protogen_app_loader.cpp
mouth/: CMakeLists.txt
mouth/include/protogen/mouth/: audio.h
mouth/src/: audio.cpp
network_scripts/: disable_protogen_network_connection.sh
presentation/: CMakeLists.txt
presentation/include/: render_surface.h
presentation/include/protogen/presentation/: EmbeddedCanvas.h  EmbeddedRenderSurface.h  IResolutionSelector.h  MostAreaResolutionSelector.h  Window.h  protogen.h  render_surface.h  sdl_render_surface.h
presentation/src/: EmbeddedCanvas.cpp  EmbeddedRenderSurface.cpp  MostAreaResolutionSelector.cpp  protogen.cpp  sdl_render_surface.cpp
protogen/: CMakeLists.txt
protogen/include/: cmake_config.h.in  common_headers.hpp  protogen_app_loader.h
protogen/src/: main.cpp
protogen_images/: source.xcf
render_surfaces/: CMakeLists.txt
render_surfaces/include/protogen/render_surfaces/: RenderSurfaceOriginBundle.h  RenderSurfacesProvider.h
render_surfaces/src/: RenderSurfacesProvider.cpp
rendering/: CMakeLists.txt
rendering/include/: images.h  renderer.h
rendering/include/protogen/rendering/: images.h  renderer.h
rendering/src/: images.cpp  renderer.cpp
resources/: face.html  index.html  minecraft.html  minecraft_interface.html
resources/protogen_images/: source.xcf
resources/static/: app_endpoints.js  homepage.js  main.js  minecraft.js  minecraft_endpoints.js  minecraft_interface.js  style.css
resources/static/fragments/: toolbar.js
scripts/: create_protogen_network_connection.sh  enable_protogen_service.sh
scripts/for_server/: connect_to_protogen_network.sh  disable_protogen_service.sh  disconnect_from_protogen_network.sh  enable_protogen_service.sh
scripts/for_server/systemd_services/: protogen.service
scripts/for_wap/: .disable_protogen_network_connection.sh.swp  create_protogen_network_connection.sh
scripts/systemd_services/: protogen.service
sensors/: CMakeLists.txt
sensors/include/protogen/sensors/: SensorOriginBundle.h  SensorsProvider.h
sensors/src/: SensorsProvider.cpp
server/: CMakeLists.txt
server/include/: sse.h  web_server.h
server/include/protogen/server/: sse.h  web_server.h
server/src/: web_server.cpp
src/: app_state.cpp  audio.cpp  images.cpp  main.cpp  minecraft.cpp  minecraft_state.cpp  protogen.cpp  protogen_head_state.cpp  renderer.cpp  sdl_render_surface.cpp  utils.cpp  web_server.cpp
state/: CMakeLists.txt
state/include/: app_state.h  minecraft.h  protogen_head_state.h
state/include/protogen/state/: app_state.h  minecraft_state.h  protogen_head_state.h
state/src/: app_state.cpp  minecraft.cpp  minecraft_state.cpp  protogen_head_state.cpp
static/: .style.css.swp  main.js  minecraft.js  minecraft_endpoints.js  minecraft_interface.js  style.css
static/fragments/: toolbar.js
tests/: CMakeLists.txt
tests/src/installable_headers/: StandardAttributeStoreTest.cpp
tests/src/installable_headers/protogen/: StandardAttributeStoreTest.cpp  UniSensorTest.cpp
utils/: CMakeLists.txt
utils/include/: utils.h
utils/include/protogen/utils/: utils.h  visitor_helper.h
utils/src/: utils.cpp
